--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,6 +11,8 @@ django-templated-mail==1.1.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 djoser==2.2.0
+drf-extra-fields==3.7.0
+filetype==1.2.0
 flake8==6.1.0
 idna==3.4
 isort==5.12.0
