--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -33,3 +33,6 @@ social-auth-core==4.4.2
 sqlparse==0.4.4
 typing_extensions==4.7.1
 urllib3==2.0.4
+gunicorn==20.1.0
+psycopg2-binary==2.9.3
+django-cors-headers==3.13.0
