--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,10 +1,20 @@
 version: '3.3'
 services:
-
+  db:
+    image: postgres:13
+    env_file: .env
+    volumes:
+      - /var/lib/postgresql/data
+  backend:
+    image: fabi667coder/foodgram_backend
+    env_file: .env
+    volumes:
+      - static_value:/app/static/
+      - media_value:/app/media/
+    depends_on:
+      - db
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    image: fabi667coder/foodgram_frontend
     volumes:
       - ../frontend/:/app/result_build/
   nginx:
@@ -15,3 +25,12 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
+    depends_on:
+      - backend
+      - frontend
+volumes:
+  database:
+  static_value:
+  media_value:
