fix review comments

--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -5,6 +5,8 @@ server {
         try_files $uri $uri/redoc.html;
     }
 
+    # если я осталю только location /static, то статика польностью сломается
+
     location /static/admin/ {
         root /var/html/;
     }
